--- a/Sources/Constants/Languages/Arabic.json
+++ b/Sources/Constants/Languages/Arabic.json
@@ -595,5 +595,46 @@
   "ContactOfficial": "تواصل رسمي",
   "joinTelegram": "انضم إلى قناتنا على تليجرام!",
   "joinTelegramDesc": "احصل على التحديثات الفورية، والمحتوى الحصري، وتواصل مع أفراد ذوي الأفكار المماثلة. كن جزءًا من المحادثة!",
-  "JoinNow": "انضم الآن"
+  "JoinNow": "انضم الآن",
+  "LoanEligibility": "أهلية القرض",
+  "CompareLoans": "قارن القروض",
+  "TaxCalculation": "حساب الضرائب",
+  "EMICalculator": "حاسبة EMI",
+  "EMICalculatorDesc": "طريقة سهلة وسريعة لحساب قسط القرض الخاص بك",
+  "GrossMonthlyIncome": "الدخل الشهري الإجمالي",
+  "TotalMonthlyEMI": "إجمالي القسط الشهري",
+  "LoanAmount": "مبلغ القرض",
+  "AnnualInterestRate": "معدل الفائدة السنوي",
+  "max50perannum": "(الحد الأقصى 50٪ سنويًا)",
+  "max30year": "(الحد الأقصى 30 عامًا)",
+  "Tenure": "المدة",
+  "Calculate": "احسب",
+  "LoanAmountYouAreEligibleFor": "مبلغ القرض الذي تستحقه",
+  "EMIYouAreEligibleFor": "قسط القرض الذي تستحقه",
+  "ShareResult": "شارك النتيجة",
+  "LoanEmiDesc": "تم حساب أهلية القرض باستخدام نظام FOIR، وبالتالي يمكن أن تختلف مع البنوك المختلفة، وهو تقدير تقريبي.",
+  "CalculateNow": "احسب الآن",
+  "Loan1": "قرض 1",
+  "Loan2": "قرض 2",
+  "PrincipalAmount": "المبلغ الرئيسي",
+  "Interest": "الفائدة",
+  "LoanTenure": "مدة القرض",
+  "EMI": "قسط القرض",
+  "Difference": "الفرق: ",
+  "TotalPaymentAmount": "إجمالي مبلغ الدفع",
+  "TotalInterest": "إجمالي الفائدة",
+  "Amount": "المبلغ",
+  "RateOfTax": "معدل الضريبة",
+  "GSTisAdded": "تم إضافة ضريبة السلع والخدمات",
+  "NetAmount": "المبلغ الصافي",
+  "GSTAmount": "مبلغ ضريبة السلع والخدمات",
+  "TotalAmount": "المبلغ الإجمالي",
+  "Result": "النتيجة",
+  "FirstEMI": "أول قسط: - ",
+  "Year": "سنة",
+  "Month": "شهر",
+  "TotalPrinciple": "إجمالي المبدأ",
+  "TotalPaymentPrincipleInterest": "إجمالي الدفع بالمبدأ والفائدة",
+  "LoanLastDate": "تاريخ انتهاء القرض",
+  "EMIMonthlyPayment": "دفعة القسط الشهري"
 }
