--- a/Sources/Constants/Languages/Chinese.json
+++ b/Sources/Constants/Languages/Chinese.json
@@ -593,5 +593,46 @@
   "ContactOfficial": "官方联系",
   "joinTelegram": "加入我们的Telegram频道！",
   "joinTelegramDesc": "即时获取更新，独家内容，并与志同道合的人们联系。成为对话的一部分！",
-  "JoinNow": "立即加入"
+  "JoinNow": "立即加入",
+  "LoanEligibility": "贷款资格",
+  "CompareLoans": "比较贷款",
+  "TaxCalculation": "税务计算",
+  "EMICalculator": "EMI计算器",
+  "EMICalculatorDesc": "简单快速的计算贷款EMI的方法",
+  "GrossMonthlyIncome": "月总收入",
+  "TotalMonthlyEMI": "月总EMI",
+  "LoanAmount": "贷款金额",
+  "AnnualInterestRate": "年利率",
+  "max50perannum": "(最高50%每年)",
+  "max30year": "(最长30年)",
+  "Tenure": "期限",
+  "Calculate": "计算",
+  "LoanAmountYouAreEligibleFor": "您有资格获得的贷款金额",
+  "EMIYouAreEligibleFor": "您有资格获得的EMI",
+  "ShareResult": "分享结果",
+  "LoanEmiDesc": "贷款资格是使用FOIR系统计算的，因此不同银行可能有所不同，这是估算值。",
+  "CalculateNow": "立即计算",
+  "Loan1": "贷款1",
+  "Loan2": "贷款2",
+  "PrincipalAmount": "本金金额",
+  "Interest": "利息",
+  "LoanTenure": "贷款期限",
+  "EMI": "EMI",
+  "Difference": "差异：",
+  "TotalPaymentAmount": "总支付金额",
+  "TotalInterest": "总利息",
+  "Amount": "金额",
+  "RateOfTax": "税率",
+  "GSTisAdded": "已加GST",
+  "NetAmount": "净额",
+  "GSTAmount": "GST金额",
+  "TotalAmount": "总金额",
+  "Result": "结果",
+  "FirstEMI": "第一个EMI：-",
+  "Year": "年",
+  "Month": "月",
+  "TotalPrinciple": "总本金",
+  "TotalPaymentPrincipleInterest": "总支付本金和利息",
+  "LoanLastDate": "贷款最后日期",
+  "EMIMonthlyPayment": "EMI月支付"
 }
