--- a/Sources/Constants/Languages/English.json
+++ b/Sources/Constants/Languages/English.json
@@ -599,5 +599,46 @@
   "ContactOfficial": "Contact Official",
   "joinTelegram": "Join Our Telegram Channel!",
   "joinTelegramDesc": "Get instant updates, exclusive content, and connect with like-minded individuals. Be part of the conversation!",
-  "JoinNow": "Join Now"
+  "JoinNow": "Join Now",
+  "LoanEligibility": "Loan Eligibility",
+  "CompareLoans": "Compare Loans",
+  "TaxCalculation": "Tax Calculation",
+  "EMICalculator": "EMI Calculator",
+  "EMICalculatorDesc": "Easy and fast way to calculator your loan EMI",
+  "GrossMonthlyIncome": "Gross Monthly Income",
+  "TotalMonthlyEMI": "Total Monthly EMI",
+  "LoanAmount": "Loan Amount",
+  "AnnualInterestRate": "Annual Interest Rate",
+  "max50perannum": "(max 50% per annum)",
+  "max30year": "(max 30yr)",
+  "Tenure": "Tenure",
+  "Calculate": "Calculate",
+  "LoanAmountYouAreEligibleFor": "Loan Amount You Are Eligible For",
+  "EMIYouAreEligibleFor": "EMI You Are Eligible For",
+  "ShareResult": "Share Result",
+  "LoanEmiDesc": "Loan eligible is calculated using the FOIR system, thus can vary with different banks, it's the estimated calculation.",
+  "CalculateNow": "Calculate Now",
+  "Loan1": "Loan 1",
+  "Loan2": "Loan 2",
+  "PrincipalAmount": "Principal Amount",
+  "Interest": "Interest",
+  "LoanTenure": "Loan Tenure",
+  "EMI": "EMI",
+  "Difference": "Difference : ",
+  "TotalPaymentAmount": "Total Payment Amount",
+  "TotalInterest": "Total Interest",
+  "Amount": "Amount",
+  "RateOfTax": "Rate Of Tax",
+  "GSTisAdded": "GST is Added",
+  "NetAmount": "Net Amount",
+  "GSTAmount": "GST Amount",
+  "TotalAmount": "Total Amount",
+  "Result": "Result",
+  "FirstEMI": "First EMI:- ",
+  "Year": "Year",
+  "Month": "Month",
+  "TotalPrinciple": "Total Principle",
+  "TotalPaymentPrincipleInterest": "Total Payment Principle Interest",
+  "LoanLastDate": "Loan Last Date",
+  "EMIMonthlyPayment": "EMI Monthly Payment"
 }
