--- a/Sources/Constants/Languages/French.json
+++ b/Sources/Constants/Languages/French.json
@@ -599,5 +599,46 @@
   "ContactOfficial": "Contact officiel",
   "joinTelegram": "Rejoignez notre chaîne Telegram !",
   "joinTelegramDesc": "Obtenez des mises à jour instantanées, du contenu exclusif et connectez-vous avec des individus partageant les mêmes idées. Faites partie de la conversation !",
-  "JoinNow": "Rejoindre maintenant"
+  "JoinNow": "Rejoindre maintenant",
+  "LoanEligibility": "Éligibilité au prêt",
+  "CompareLoans": "Comparer les prêts",
+  "TaxCalculation": "Calcul des impôts",
+  "EMICalculator": "Calculateur d'EMI",
+  "EMICalculatorDesc": "Façon facile et rapide de calculer votre EMI de prêt",
+  "GrossMonthlyIncome": "Revenu mensuel brut",
+  "TotalMonthlyEMI": "EMI mensuel total",
+  "LoanAmount": "Montant du prêt",
+  "AnnualInterestRate": "Taux d'intérêt annuel",
+  "max50perannum": "(max 50% par an)",
+  "max30year": "(max 30 ans)",
+  "Tenure": "Durée",
+  "Calculate": "Calculer",
+  "LoanAmountYouAreEligibleFor": "Montant du prêt auquel vous êtes éligible",
+  "EMIYouAreEligibleFor": "EMI auquel vous êtes éligible",
+  "ShareResult": "Partager le résultat",
+  "LoanEmiDesc": "L'éligibilité au prêt est calculée en utilisant le système FOIR, elle peut donc varier selon les banques, c'est une estimation.",
+  "CalculateNow": "Calculez maintenant",
+  "Loan1": "Prêt 1",
+  "Loan2": "Prêt 2",
+  "PrincipalAmount": "Montant principal",
+  "Interest": "Intérêt",
+  "LoanTenure": "Durée du prêt",
+  "EMI": "EMI",
+  "Difference": "Différence : ",
+  "TotalPaymentAmount": "Montant total du paiement",
+  "TotalInterest": "Intérêt total",
+  "Amount": "Montant",
+  "RateOfTax": "Taux de taxe",
+  "GSTisAdded": "La TVA est ajoutée",
+  "NetAmount": "Montant net",
+  "GSTAmount": "Montant de la TVA",
+  "TotalAmount": "Montant total",
+  "Result": "Résultat",
+  "FirstEMI": "Première EMI : - ",
+  "Year": "Année",
+  "Month": "Mois",
+  "TotalPrinciple": "Principal total",
+  "TotalPaymentPrincipleInterest": "Total des paiements (principal + intérêt)",
+  "LoanLastDate": "Date de fin du prêt",
+  "EMIMonthlyPayment": "Paiement mensuel EMI"
 }
