--- a/Sources/Constants/Languages/German.json
+++ b/Sources/Constants/Languages/German.json
@@ -599,5 +599,46 @@
   "ContactOfficial": "Offizieller Kontakt",
   "joinTelegram": "Treten Sie unserem Telegram-Kanal bei!",
   "joinTelegramDesc": "Erhalten Sie sofortige Updates, exklusive Inhalte und vernetzen Sie sich mit Gleichgesinnten. Werden Sie Teil der Unterhaltung!",
-  "JoinNow": "Jetzt beitreten"
+  "JoinNow": "Jetzt beitreten",
+  "LoanEligibility": "Darlehensberechtigung",
+  "CompareLoans": "Darlehen vergleichen",
+  "TaxCalculation": "Steuerberechnung",
+  "EMICalculator": "EMI-Rechner",
+  "EMICalculatorDesc": "Einfache und schnelle Methode zur Berechnung Ihrer Darlehens-EMI",
+  "GrossMonthlyIncome": "Bruttomonatseinkommen",
+  "TotalMonthlyEMI": "Gesamtmonatliche EMI",
+  "LoanAmount": "Darlehensbetrag",
+  "AnnualInterestRate": "Jahreszins",
+  "max50perannum": "(maximal 50% pro Jahr)",
+  "max30year": "(maximal 30 Jahre)",
+  "Tenure": "Laufzeit",
+  "Calculate": "Berechnen",
+  "LoanAmountYouAreEligibleFor": "Darlehensbetrag, für den Sie berechtigt sind",
+  "EMIYouAreEligibleFor": "EMI, für die Sie berechtigt sind",
+  "ShareResult": "Ergebnis teilen",
+  "LoanEmiDesc": "Die Darlehensberechtigung wird mit dem FOIR-System berechnet und kann daher je nach Bank variieren. Es handelt sich um eine Schätzung.",
+  "CalculateNow": "Jetzt berechnen",
+  "Loan1": "Darlehen 1",
+  "Loan2": "Darlehen 2",
+  "PrincipalAmount": "Hauptbetrag",
+  "Interest": "Zinsen",
+  "LoanTenure": "Darlehenslaufzeit",
+  "EMI": "EMI",
+  "Difference": "Unterschied: ",
+  "TotalPaymentAmount": "Gesamtzahlung",
+  "TotalInterest": "Gesamtzinsen",
+  "Amount": "Betrag",
+  "RateOfTax": "Steuersatz",
+  "GSTisAdded": "MwSt. wird hinzugefügt",
+  "NetAmount": "Nettobetrag",
+  "GSTAmount": "MwSt.-Betrag",
+  "TotalAmount": "Gesamtbetrag",
+  "Result": "Ergebnis",
+  "FirstEMI": "Erste EMI: - ",
+  "Year": "Jahr",
+  "Month": "Monat",
+  "TotalPrinciple": "Gesamtbetrag",
+  "TotalPaymentPrincipleInterest": "Gesamtzahlung (Hauptbetrag + Zinsen)",
+  "LoanLastDate": "Letztes Darlehensdatum",
+  "EMIMonthlyPayment": "Monatliche EMI-Zahlung"
 }
