--- a/Sources/Constants/Languages/Hindi.json
+++ b/Sources/Constants/Languages/Hindi.json
@@ -599,5 +599,46 @@
   "ContactOfficial": "आधिकारिक संपर्क",
   "joinTelegram": "हमारे टेलीग्राम चैनल से जुड़ें!",
   "joinTelegramDesc": "तुरंत अपडेट प्राप्त करें, विशेष सामग्री प्राप्त करें, और समर्थन वाले व्यक्तियों से जुड़ें। बातचीत का हिस्सा बनें!",
-  "JoinNow": "अभी शामिल हों"
+  "JoinNow": "अभी शामिल हों",
+  "LoanEligibility": "ऋण पात्रता",
+  "CompareLoans": "ऋण की तुलना करें",
+  "TaxCalculation": "कर गणना",
+  "EMICalculator": "EMI कैलकुलेटर",
+  "EMICalculatorDesc": "आपके ऋण EMI की गणना करने का आसान और तेज़ तरीका",
+  "GrossMonthlyIncome": "सकल मासिक आय",
+  "TotalMonthlyEMI": "कुल मासिक EMI",
+  "LoanAmount": "ऋण राशि",
+  "AnnualInterestRate": "वार्षिक ब्याज दर",
+  "max50perannum": "(अधिकतम 50% प्रति वर्ष)",
+  "max30year": "(अधिकतम 30 वर्ष)",
+  "Tenure": "अवधि",
+  "Calculate": "गणना करें",
+  "LoanAmountYouAreEligibleFor": "जिस ऋण राशि के लिए आप पात्र हैं",
+  "EMIYouAreEligibleFor": "जिस EMI के लिए आप पात्र हैं",
+  "ShareResult": "परिणाम साझा करें",
+  "LoanEmiDesc": "ऋण पात्रता को FOIR प्रणाली का उपयोग करके गणना की जाती है, इसलिए यह विभिन्न बैंकों के साथ भिन्न हो सकती है, यह एक अनुमानित गणना है।",
+  "CalculateNow": "अभी गणना करें",
+  "Loan1": "ऋण 1",
+  "Loan2": "ऋण 2",
+  "PrincipalAmount": "मुख्य राशि",
+  "Interest": "ब्याज",
+  "LoanTenure": "ऋण अवधि",
+  "EMI": "EMI",
+  "Difference": "अंतर: ",
+  "TotalPaymentAmount": "कुल भुगतान राशि",
+  "TotalInterest": "कुल ब्याज",
+  "Amount": "राशि",
+  "RateOfTax": "कर की दर",
+  "GSTisAdded": "GST जोड़ा गया है",
+  "NetAmount": "शुद्ध राशि",
+  "GSTAmount": "GST राशि",
+  "TotalAmount": "कुल राशि",
+  "Result": "परिणाम",
+  "FirstEMI": "पहला EMI: - ",
+  "Year": "वर्ष",
+  "Month": "महीना",
+  "TotalPrinciple": "कुल मुख्य राशि",
+  "TotalPaymentPrincipleInterest": "कुल भुगतान (मुख्य राशि + ब्याज)",
+  "LoanLastDate": "ऋण की अंतिम तिथि",
+  "EMIMonthlyPayment": "EMI मासिक भुगतान"
 }
