--- a/Sources/Constants/Languages/Indonesian.json
+++ b/Sources/Constants/Languages/Indonesian.json
@@ -599,5 +599,46 @@
   "ContactOfficial": "Kontak Resmi",
   "joinTelegram": "Bergabunglah dengan Saluran Telegram Kami!",
   "joinTelegramDesc": "Dapatkan pembaruan instan, konten eksklusif, dan terhubung dengan individu sejenis. Jadilah bagian dari percakapan!",
-  "JoinNow": "Bergabung Sekarang"
+  "JoinNow": "Bergabung Sekarang",
+  "LoanEligibility": "Kelayakan Pinjaman",
+  "CompareLoans": "Bandingkan Pinjaman",
+  "TaxCalculation": "Perhitungan Pajak",
+  "EMICalculator": "Kalkulator EMI",
+  "EMICalculatorDesc": "Cara mudah dan cepat untuk menghitung EMI pinjaman Anda",
+  "GrossMonthlyIncome": "Pendapatan Bulanan Bruto",
+  "TotalMonthlyEMI": "Total EMI Bulanan",
+  "LoanAmount": "Jumlah Pinjaman",
+  "AnnualInterestRate": "Tingkat Bunga Tahunan",
+  "max50perannum": "(maks 50% per tahun)",
+  "max30year": "(maks 30 tahun)",
+  "Tenure": "Jangka Waktu",
+  "Calculate": "Hitung",
+  "LoanAmountYouAreEligibleFor": "Jumlah Pinjaman yang Anda Layak Dapatkan",
+  "EMIYouAreEligibleFor": "EMI yang Anda Layak Dapatkan",
+  "ShareResult": "Bagikan Hasil",
+  "LoanEmiDesc": "Kelayakan pinjaman dihitung menggunakan sistem FOIR, sehingga bisa berbeda dengan berbagai bank, ini adalah perkiraan.",
+  "CalculateNow": "Hitung Sekarang",
+  "Loan1": "Pinjaman 1",
+  "Loan2": "Pinjaman 2",
+  "PrincipalAmount": "Jumlah Pokok",
+  "Interest": "Bunga",
+  "LoanTenure": "Jangka Waktu Pinjaman",
+  "EMI": "EMI",
+  "Difference": "Perbedaan: ",
+  "TotalPaymentAmount": "Jumlah Pembayaran Total",
+  "TotalInterest": "Total Bunga",
+  "Amount": "Jumlah",
+  "RateOfTax": "Tarif Pajak",
+  "GSTisAdded": "GST Ditambahkan",
+  "NetAmount": "Jumlah Bersih",
+  "GSTAmount": "Jumlah GST",
+  "TotalAmount": "Jumlah Total",
+  "Result": "Hasil",
+  "FirstEMI": "EMI Pertama: - ",
+  "Year": "Tahun",
+  "Month": "Bulan",
+  "TotalPrinciple": "Total Pokok",
+  "TotalPaymentPrincipleInterest": "Total Pembayaran Pokok dan Bunga",
+  "LoanLastDate": "Tanggal Terakhir Pinjaman",
+  "EMIMonthlyPayment": "Pembayaran EMI Bulanan"
 }
