--- a/Sources/Constants/Languages/Italian.json
+++ b/Sources/Constants/Languages/Italian.json
@@ -599,5 +599,46 @@
   "ContactOfficial": "Contatto ufficiale",
   "joinTelegram": "Unisciti al nostro Canale Telegram!",
   "joinTelegramDesc": "Ricevi aggiornamenti istantanei, contenuti esclusivi e connettiti con individui simili. Fai parte della conversazione!",
-  "JoinNow": "Unisciti Ora"
+  "JoinNow": "Unisciti Ora",
+  "LoanEligibility": "Idoneità al prestito",
+  "CompareLoans": "Confronta prestiti",
+  "TaxCalculation": "Calcolo delle tasse",
+  "EMICalculator": "Calcolatore EMI",
+  "EMICalculatorDesc": "Modo semplice e veloce per calcolare il tuo EMI del prestito",
+  "GrossMonthlyIncome": "Reddito mensile lordo",
+  "TotalMonthlyEMI": "EMI mensile totale",
+  "LoanAmount": "Importo del prestito",
+  "AnnualInterestRate": "Tasso di interesse annuale",
+  "max50perannum": "(massimo 50% annuo)",
+  "max30year": "(massimo 30 anni)",
+  "Tenure": "Durata",
+  "Calculate": "Calcola",
+  "LoanAmountYouAreEligibleFor": "Importo del prestito per cui sei idoneo",
+  "EMIYouAreEligibleFor": "EMI per cui sei idoneo",
+  "ShareResult": "Condividi risultato",
+  "LoanEmiDesc": "L'idoneità al prestito viene calcolata utilizzando il sistema FOIR, quindi può variare con le diverse banche, è una stima.",
+  "CalculateNow": "Calcola ora",
+  "Loan1": "Prestito 1",
+  "Loan2": "Prestito 2",
+  "PrincipalAmount": "Importo principale",
+  "Interest": "Interesse",
+  "LoanTenure": "Durata del prestito",
+  "EMI": "EMI",
+  "Difference": "Differenza: ",
+  "TotalPaymentAmount": "Importo totale del pagamento",
+  "TotalInterest": "Interesse totale",
+  "Amount": "Importo",
+  "RateOfTax": "Aliquota fiscale",
+  "GSTisAdded": "IVA aggiunta",
+  "NetAmount": "Importo netto",
+  "GSTAmount": "Importo IVA",
+  "TotalAmount": "Importo totale",
+  "Result": "Risultato",
+  "FirstEMI": "Prima EMI: - ",
+  "Year": "Anno",
+  "Month": "Mese",
+  "TotalPrinciple": "Principale totale",
+  "TotalPaymentPrincipleInterest": "Totale pagamento capitale e interesse",
+  "LoanLastDate": "Ultima data del prestito",
+  "EMIMonthlyPayment": "Pagamento mensile EMI"
 }
