--- a/Sources/Constants/Languages/Japanese.json
+++ b/Sources/Constants/Languages/Japanese.json
@@ -599,5 +599,46 @@
   "ContactOfficial": "公式連絡",
   "joinTelegram": "Telegramチャンネルに参加しましょう！",
   "joinTelegramDesc": "即時の更新情報や独占コンテンツを入手し、志を同じくする仲間とつながりましょう。会話の一部となりましょう！",
-  "JoinNow": "今すぐ参加"
+  "JoinNow": "今すぐ参加",
+  "LoanEligibility": "ローン適格性",
+  "CompareLoans": "ローンを比較",
+  "TaxCalculation": "税計算",
+  "EMICalculator": "EMI計算機",
+  "EMICalculatorDesc": "ローンEMIを簡単かつ迅速に計算する方法",
+  "GrossMonthlyIncome": "月間総収入",
+  "TotalMonthlyEMI": "月間総EMI",
+  "LoanAmount": "ローン金額",
+  "AnnualInterestRate": "年利率",
+  "max50perannum": "(最大年間50%)",
+  "max30year": "(最大30年)",
+  "Tenure": "期間",
+  "Calculate": "計算",
+  "LoanAmountYouAreEligibleFor": "あなたが適格なローン金額",
+  "EMIYouAreEligibleFor": "あなたが適格なEMI",
+  "ShareResult": "結果を共有",
+  "LoanEmiDesc": "ローンの適格性はFOIRシステムを使用して計算されるため、銀行によって異なる場合があります。これは推定計算です。",
+  "CalculateNow": "今すぐ計算",
+  "Loan1": "ローン1",
+  "Loan2": "ローン2",
+  "PrincipalAmount": "元金",
+  "Interest": "利息",
+  "LoanTenure": "ローン期間",
+  "EMI": "EMI",
+  "Difference": "差異: ",
+  "TotalPaymentAmount": "総支払額",
+  "TotalInterest": "総利息",
+  "Amount": "金額",
+  "RateOfTax": "税率",
+  "GSTisAdded": "消費税が追加されます",
+  "NetAmount": "純額",
+  "GSTAmount": "消費税額",
+  "TotalAmount": "総額",
+  "Result": "結果",
+  "FirstEMI": "最初のEMI：- ",
+  "Year": "年",
+  "Month": "月",
+  "TotalPrinciple": "総元金",
+  "TotalPaymentPrincipleInterest": "総支払元金と利息",
+  "LoanLastDate": "ローンの最終日",
+  "EMIMonthlyPayment": "EMI月次支払い"
 }
