--- a/Sources/Constants/Languages/Korean.json
+++ b/Sources/Constants/Languages/Korean.json
@@ -599,5 +599,46 @@
   "ContactOfficial": "공식 연락처",
   "joinTelegram": "텔레그램 채널 가입하기!",
   "joinTelegramDesc": "즉시 업데이트를 받고, 독점 콘텐츠를 이용하며, 유사한 관심을 가진 사람들과 연결하세요. 대화에 참여해 보세요!",
-  "JoinNow": "지금 가입하기"
+  "JoinNow": "지금 가입하기",
+  "LoanEligibility": "대출 자격",
+  "CompareLoans": "대출 비교",
+  "TaxCalculation": "세금 계산",
+  "EMICalculator": "EMI 계산기",
+  "EMICalculatorDesc": "대출 EMI를 쉽게 계산하는 방법",
+  "GrossMonthlyIncome": "월 총소득",
+  "TotalMonthlyEMI": "월 총 EMI",
+  "LoanAmount": "대출 금액",
+  "AnnualInterestRate": "연이율",
+  "max50perannum": "(최대 연 50%)",
+  "max30year": "(최대 30년)",
+  "Tenure": "기간",
+  "Calculate": "계산",
+  "LoanAmountYouAreEligibleFor": "대출 자격 금액",
+  "EMIYouAreEligibleFor": "대출 자격 EMI",
+  "ShareResult": "결과 공유",
+  "LoanEmiDesc": "대출 자격은 FOIR 시스템을 사용하여 계산되며, 은행마다 다를 수 있습니다. 이는 예상 계산입니다.",
+  "CalculateNow": "지금 계산",
+  "Loan1": "대출 1",
+  "Loan2": "대출 2",
+  "PrincipalAmount": "원금",
+  "Interest": "이자",
+  "LoanTenure": "대출 기간",
+  "EMI": "EMI",
+  "Difference": "차이: ",
+  "TotalPaymentAmount": "총 지불 금액",
+  "TotalInterest": "총 이자",
+  "Amount": "금액",
+  "RateOfTax": "세율",
+  "GSTisAdded": "GST가 추가되었습니다",
+  "NetAmount": "순금액",
+  "GSTAmount": "GST 금액",
+  "TotalAmount": "총 금액",
+  "Result": "결과",
+  "FirstEMI": "첫 번째 EMI: - ",
+  "Year": "년",
+  "Month": "월",
+  "TotalPrinciple": "총 원금",
+  "TotalPaymentPrincipleInterest": "총 원금 및 이자 지불",
+  "LoanLastDate": "대출 만기일",
+  "EMIMonthlyPayment": "월 EMI 지불"
 }
