--- a/Sources/Constants/Languages/Portuguese.json
+++ b/Sources/Constants/Languages/Portuguese.json
@@ -599,5 +599,46 @@
   "ContactOfficial": "Contato oficial",
   "joinTelegram": "Junte-se ao nosso Canal no Telegram!",
   "joinTelegramDesc": "Receba atualizações instantâneas, conteúdo exclusivo e conecte-se com pessoas de ideias similares. Faça parte da conversa!",
-  "JoinNow": "Junte-se Agora"
+  "JoinNow": "Junte-se Agora",
+  "LoanEligibility": "Elegibilidade para Empréstimo",
+  "CompareLoans": "Comparar Empréstimos",
+  "TaxCalculation": "Cálculo de Impostos",
+  "EMICalculator": "Calculadora de EMI",
+  "EMICalculatorDesc": "Forma fácil e rápida de calcular seu EMI de empréstimo",
+  "GrossMonthlyIncome": "Renda Mensal Bruta",
+  "TotalMonthlyEMI": "EMI Mensal Total",
+  "LoanAmount": "Valor do Empréstimo",
+  "AnnualInterestRate": "Taxa de Juros Anual",
+  "max50perannum": "(máximo de 50% ao ano)",
+  "max30year": "(máximo de 30 anos)",
+  "Tenure": "Prazo",
+  "Calculate": "Calcular",
+  "LoanAmountYouAreEligibleFor": "Valor do Empréstimo para o Qual Você é Elegível",
+  "EMIYouAreEligibleFor": "EMI para o Qual Você é Elegível",
+  "ShareResult": "Compartilhar Resultado",
+  "LoanEmiDesc": "A elegibilidade para empréstimo é calculada usando o sistema FOIR, podendo variar entre os bancos, é um cálculo estimado.",
+  "CalculateNow": "Calcular Agora",
+  "Loan1": "Empréstimo 1",
+  "Loan2": "Empréstimo 2",
+  "PrincipalAmount": "Valor Principal",
+  "Interest": "Juros",
+  "LoanTenure": "Prazo do Empréstimo",
+  "EMI": "EMI",
+  "Difference": "Diferença: ",
+  "TotalPaymentAmount": "Valor Total do Pagamento",
+  "TotalInterest": "Juros Totais",
+  "Amount": "Quantia",
+  "RateOfTax": "Taxa de Imposto",
+  "GSTisAdded": "GST Adicionado",
+  "NetAmount": "Quantia Líquida",
+  "GSTAmount": "Quantia de GST",
+  "TotalAmount": "Quantia Total",
+  "Result": "Resultado",
+  "FirstEMI": "Primeiro EMI: - ",
+  "Year": "Ano",
+  "Month": "Mês",
+  "TotalPrinciple": "Total do Principal",
+  "TotalPaymentPrincipleInterest": "Total do Pagamento do Principal e Juros",
+  "LoanLastDate": "Data Final do Empréstimo",
+  "EMIMonthlyPayment": "Pagamento Mensal de EMI"
 }
