--- a/Sources/Constants/Languages/Russian.json
+++ b/Sources/Constants/Languages/Russian.json
@@ -599,5 +599,46 @@
   "ContactOfficial": "Официальный контакт",
   "joinTelegram": "Присоединяйтесь к нашему каналу в Telegram!",
   "joinTelegramDesc": "Получайте мгновенные обновления, эксклюзивный контент и общайтесь с единомышленниками. Присоединяйтесь к разговору!",
-  "JoinNow": "Присоединиться сейчас"
+  "JoinNow": "Присоединиться сейчас",
+  "LoanEligibility": "Право на получение кредита",
+  "CompareLoans": "Сравнить кредиты",
+  "TaxCalculation": "Расчет налога",
+  "EMICalculator": "Калькулятор EMI",
+  "EMICalculatorDesc": "Простой и быстрый способ рассчитать ваш EMI по кредиту",
+  "GrossMonthlyIncome": "Брутто месячный доход",
+  "TotalMonthlyEMI": "Общий месячный EMI",
+  "LoanAmount": "Сумма кредита",
+  "AnnualInterestRate": "Годовая процентная ставка",
+  "max50perannum": "(макс. 50% в год)",
+  "max30year": "(макс. 30 лет)",
+  "Tenure": "Срок",
+  "Calculate": "Рассчитать",
+  "LoanAmountYouAreEligibleFor": "Сумма кредита, на которую вы имеете право",
+  "EMIYouAreEligibleFor": "EMI, на который вы имеете право",
+  "ShareResult": "Поделиться результатом",
+  "LoanEmiDesc": "Право на кредит рассчитывается с использованием системы FOIR, поэтому может различаться в зависимости от банков, это оценочное значение.",
+  "CalculateNow": "Рассчитать сейчас",
+  "Loan1": "Кредит 1",
+  "Loan2": "Кредит 2",
+  "PrincipalAmount": "Основная сумма",
+  "Interest": "Проценты",
+  "LoanTenure": "Срок кредита",
+  "EMI": "EMI",
+  "Difference": "Разница: ",
+  "TotalPaymentAmount": "Общая сумма платежа",
+  "TotalInterest": "Общая сумма процентов",
+  "Amount": "Сумма",
+  "RateOfTax": "Ставка налога",
+  "GSTisAdded": "Добавлен НДС",
+  "NetAmount": "Чистая сумма",
+  "GSTAmount": "Сумма НДС",
+  "TotalAmount": "Общая сумма",
+  "Result": "Результат",
+  "FirstEMI": "Первый EMI: - ",
+  "Year": "Год",
+  "Month": "Месяц",
+  "TotalPrinciple": "Основная сумма всего",
+  "TotalPaymentPrincipleInterest": "Общая сумма платежа (основная сумма + проценты)",
+  "LoanLastDate": "Последняя дата кредита",
+  "EMIMonthlyPayment": "Ежемесячный платеж EMI"
 }
