--- a/Sources/Constants/Languages/Spanish.json
+++ b/Sources/Constants/Languages/Spanish.json
@@ -599,5 +599,46 @@
   "ContactOfficial": "Contacto oficial",
   "joinTelegram": "¡Únete a nuestro Canal de Telegram!",
   "joinTelegramDesc": "Recibe actualizaciones al instante, contenido exclusivo y conecta con personas afines. ¡Sé parte de la conversación!",
-  "JoinNow": "Únete Ahora"
+  "JoinNow": "Únete Ahora",
+  "LoanEligibility": "Elegibilidad para el préstamo",
+  "CompareLoans": "Comparar préstamos",
+  "TaxCalculation": "Cálculo de impuestos",
+  "EMICalculator": "Calculadora de EMI",
+  "EMICalculatorDesc": "Forma fácil y rápida de calcular tu EMI del préstamo",
+  "GrossMonthlyIncome": "Ingresos mensuales brutos",
+  "TotalMonthlyEMI": "EMI mensual total",
+  "LoanAmount": "Monto del préstamo",
+  "AnnualInterestRate": "Tasa de interés anual",
+  "max50perannum": "(máx. 50% anual)",
+  "max30year": "(máx. 30 años)",
+  "Tenure": "Plazo",
+  "Calculate": "Calcular",
+  "LoanAmountYouAreEligibleFor": "Monto del préstamo para el cual eres elegible",
+  "EMIYouAreEligibleFor": "EMI para el cual eres elegible",
+  "ShareResult": "Compartir resultado",
+  "LoanEmiDesc": "La elegibilidad para el préstamo se calcula utilizando el sistema FOIR, por lo que puede variar entre diferentes bancos, es un cálculo estimado.",
+  "CalculateNow": "Calcular ahora",
+  "Loan1": "Préstamo 1",
+  "Loan2": "Préstamo 2",
+  "PrincipalAmount": "Monto principal",
+  "Interest": "Intereses",
+  "LoanTenure": "Plazo del préstamo",
+  "EMI": "EMI",
+  "Difference": "Diferencia: ",
+  "TotalPaymentAmount": "Monto total del pago",
+  "TotalInterest": "Intereses totales",
+  "Amount": "Monto",
+  "RateOfTax": "Tasa de impuesto",
+  "GSTisAdded": "Se añade GST",
+  "NetAmount": "Monto neto",
+  "GSTAmount": "Monto del GST",
+  "TotalAmount": "Monto total",
+  "Result": "Resultado",
+  "FirstEMI": "Primer EMI: - ",
+  "Year": "Año",
+  "Month": "Mes",
+  "TotalPrinciple": "Total principal",
+  "TotalPaymentPrincipleInterest": "Total del pago (principal + intereses)",
+  "LoanLastDate": "Última fecha del préstamo",
+  "EMIMonthlyPayment": "Pago mensual de EMI"
 }
