--- a/Sources/Constants/Languages/Turkish.json
+++ b/Sources/Constants/Languages/Turkish.json
@@ -599,5 +599,46 @@
   "ContactOfficial": "Resmi İletişim",
   "joinTelegram": "Telegram Kanalımıza Katılın!",
   "joinTelegramDesc": "Anlık güncellemeleri alın, özel içeriklere erişin ve benzer düşünen insanlarla bağlantı kurun. Konuşmanın bir parçası olun!",
-  "JoinNow": "Şimdi Katılın"
+  "JoinNow": "Şimdi Katılın",
+  "LoanEligibility": "Kredi Uygunluğu",
+  "CompareLoans": "Kredileri Karşılaştır",
+  "TaxCalculation": "Vergi Hesaplama",
+  "EMICalculator": "EMI Hesaplayıcı",
+  "EMICalculatorDesc": "Kredi EMI'nizi kolay ve hızlı bir şekilde hesaplama yöntemi",
+  "GrossMonthlyIncome": "Brüt Aylık Gelir",
+  "TotalMonthlyEMI": "Toplam Aylık EMI",
+  "LoanAmount": "Kredi Miktarı",
+  "AnnualInterestRate": "Yıllık Faiz Oranı",
+  "max50perannum": "(yıllık max %50)",
+  "max30year": "(maks. 30 yıl)",
+  "Tenure": "Vade",
+  "Calculate": "Hesapla",
+  "LoanAmountYouAreEligibleFor": "Uygun Olduğunuz Kredi Miktarı",
+  "EMIYouAreEligibleFor": "Uygun Olduğunuz EMI",
+  "ShareResult": "Sonucu Paylaş",
+  "LoanEmiDesc": "Kredi uygunluğu FOIR sistemi kullanılarak hesaplanır, bu nedenle farklı bankalarda değişebilir, bu bir tahmin hesaplamasıdır.",
+  "CalculateNow": "Şimdi Hesapla",
+  "Loan1": "Kredi 1",
+  "Loan2": "Kredi 2",
+  "PrincipalAmount": "Ana Para",
+  "Interest": "Faiz",
+  "LoanTenure": "Kredi Vadesi",
+  "EMI": "EMI",
+  "Difference": "Fark: ",
+  "TotalPaymentAmount": "Toplam Ödeme Tutarı",
+  "TotalInterest": "Toplam Faiz",
+  "Amount": "Tutar",
+  "RateOfTax": "Vergi Oranı",
+  "GSTisAdded": "KDV Eklenmiştir",
+  "NetAmount": "Net Tutar",
+  "GSTAmount": "KDV Tutarı",
+  "TotalAmount": "Toplam Tutar",
+  "Result": "Sonuç",
+  "FirstEMI": "İlk EMI: - ",
+  "Year": "Yıl",
+  "Month": "Ay",
+  "TotalPrinciple": "Toplam Ana Para",
+  "TotalPaymentPrincipleInterest": "Toplam Ödeme (Ana Para + Faiz)",
+  "LoanLastDate": "Kredinin Son Tarihi",
+  "EMIMonthlyPayment": "Aylık EMI Ödemesi"
 }
